1.8/LandingPage/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landingpage
  template:
    metadata:
      labels:
        app: landingpage
    spec:
      containers:
        - name: landingpage
          image: landingpage:1.8
          ports:
            - containerPort: 3000
