1.8/LandingPage/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage-svc
spec:
  type: ClusterIP
  selector:
    app: landingpage
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
